--- a/index.html
+++ b/index.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html lang="ja">
- <meta charset="UTF-8" />
+<head>
+<meta charset="UTF-8" />
  <title>７章演習</title>
- 
-</html>
+ <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="main-visual">
+    <h1 class="main-visual-text">サービス紹介</h1>
+  </div>
+
+<div class="blog1">
+  <div class="blog1-img"></div>
+  <p>マンツーマンによる学習で、<br>確実にwebスキルを習得できるプログラミングスクールです。
+</p>
+<a href="https://web-camp.io/">webサイト</a>
+</div>
+
+<div class="blog2">
+  <div class="blog2-img"></div>
+  <p>未経験から転職を保証する<br>日本で唯一のプログラミングスクールです。</p>
+  <a href="https://web-camp.io/">webサイト</a>
+</div>
+
+<div class="blog3">
+  <div class="blog3-img"></div>
+  <p>家庭も仕事も頑張りたい主婦・ママ向けの<br>１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
+  <a href="https://web-camp.io/">webサイト</a>
+</div>
+
+<div class="blog4">
+  <div class="blog4-img"></div>
+  <p>3000名のエンジニアをサポートしてきたエージェントが<br>あなたの転職をサポート。
+  </p>
+  <a href="https://web-camp.io/">webサイト</a>
+</div>
+</body>
+
+ </html>
