--- a/index.html
+++ b/index.html
@@ -8,34 +8,37 @@
 
 <body>
   <div class="main-visual">
-    <h1 class="main-visual-text">サービス紹介</h1>
+    <h2 class="main-visual-text">サービス紹介</h2>
   </div>
 
+  <main>
 <div class="blog1">
-  <div class="blog1-img"></div>
+  <img class="blog-image" src="img/wc-logo.png">
   <p>マンツーマンによる学習で、<br>確実にwebスキルを習得できるプログラミングスクールです。
 </p>
 <a href="https://web-camp.io/">webサイト</a>
 </div>
 
 <div class="blog2">
-  <div class="blog2-img"></div>
+  <img class="blog-image" src="img/wcp-logo.png">
   <p>未経験から転職を保証する<br>日本で唯一のプログラミングスクールです。</p>
   <a href="https://web-camp.io/">webサイト</a>
 </div>
 
 <div class="blog3">
-  <div class="blog3-img"></div>
+  <img class="blog-image" src="img/wcw-logo.png">
   <p>家庭も仕事も頑張りたい主婦・ママ向けの<br>１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
   <a href="https://web-camp.io/">webサイト</a>
 </div>
 
 <div class="blog4">
-  <div class="blog4-img"></div>
+  <img class="blog-image" src="img/wcc-logo.png">
   <p>3000名のエンジニアをサポートしてきたエージェントが<br>あなたの転職をサポート。
   </p>
   <a href="https://web-camp.io/">webサイト</a>
 </div>
+
+</main>
 </body>
 
  </html>
